src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__ports__tests__draw_blocks_ports_custom_colors_state-4.snap
---
source: src/ui/draw_blocks/ports.rs
expression: setup.terminal.backend()
---
"╭─────────── ports ────────────╮"
"│   ip   private   public      │"
"│           8001               │"
"│                              │"
"│                              │"
"│                              │"
"│                              │"
"╰──────────────────────────────╯"
