src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__ports__tests__draw_blocks_ports_no_ports_dead.snap
---
source: src/ui/draw_blocks/ports.rs
expression: setup.terminal.backend()
---
"╭────────── ports ───────────╮"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"╰────────────────────────────╯"
